# gamescope-protocol

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs  protocol_macro.rs  stable.rs
