[package]
name = "gamescope-protocol"
version = "0.0.1"
repository = "https://github.com/ianmarmour/gamescope-protocol"
authors = ["Ian Armour <ianmarmour@gmail.com>"]
license = "MIT"
keywords = ["wayland", "gamescope", "client", "server", "protocol", "extension"]
description = "Generated APIs for the offical gamescope wayland protocol extensions"
build = "build.rs"
categories = ["api-bindings"]
edition = "2021"
readme = "README.md"
exclude = ["/gamescope", "/gamescope/protocol/meson.build", "!/gamescope/protocol"]

[dependencies]
wayland-commons = "0.29.4"
wayland-client = { version = "0.29.4", optional = true }
wayland-server = { version = "0.29.4", optional = true }

[build-dependencies]
wayland-scanner = "0.29.4"

[features]
client = ["wayland-client"]
server = ["wayland-server"]

[package.metadata.docs.rs]
all-features = true
